# MethodStrongina

./: .gitignore  CMakeLists.txt  MethodStrongina.sln  README.md  plot_graph.py
Hill/: HillProblem.hpp
MethodStrongina/: Header.h  MethodStrongina.vcxproj  Source.cpp  minimization_log.txt  trials_log.txt
MethodStrongina/x64/Debug/: MethodStrongina.exe.recipe  MethodStrongina.ilk  vc143.idb
MethodStrongina/x64/Debug/MethodStrongina.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MethodStrongina.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MethodStrongina/x64/Release/MethodStrongina.tlog/: MethodStrongina.lastbuildstate
Shekel/: ShekelProblem.hpp
